# varlock

./: .gitignore  CLAUDE.md  Cargo.toml
.beads/: issues.jsonl  metadata.json
src/: fasta_prep.rs  main.rs
src/call_targets/: mod.rs  output.rs  pileup.rs  reference.rs  samples.rs  targets.rs  types.rs
