[package]
name = "varlock"
version = "0.1.0"
edition = "2024"
description = "Variant calling CLI from BAM alignments"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
noodles-bam = "0.86"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-sam = "0.82"
noodles-tabix = "0.60"
noodles-csi = "0.54"
anyhow = "1.0.93"
flate2 = "1.1.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
